--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings | 网站设置
 title: iridescent
 SEOTitle: 楚嘉俊的博客
-header-img: img/home-bg-he.png
+header-img: img/psb.jpg
 email: 2508923668@qq.com
 description: "chujiajun的博客"
 keyword: "chujiajun, chujiajun的博客,chujiajun, iridescent"
